# Linux_C_CPP

cpu_info/: .gitignore  CMakeLists.txt  README.md
cpu_info/inc/cpu/linux/ic/: cpu_ic_architecture.hpp  cpu_ic_number_of_cores.hpp  cpu_ic_processor_name.hpp  cpu_ic_workload_of_cores.hpp  information_collector.hpp
cpu_info/inc/linux/cpu/ic/: cpu_ic_architecture.hpp  cpu_ic_number_of_cores.hpp  cpu_ic_processor_name.hpp  cpu_ic_temperature.hpp  cpu_ic_workload_of_cores.hpp  information_collector.hpp
cpu_info/src/linux/cpu/ic/: cpu_ic_architecture.cpp  cpu_ic_number_of_cores.cpp  cpu_ic_processor_name.cpp
